--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -1949,11 +1949,12 @@ Using color to show when the wind turbines were  built:
 
 .pull-left[
 ```{r wt-IA-color, eval = FALSE}
-year_brk <- c(0, 2005, 2010, 2015, 2020)
+year_brk <- c(0, 2005, 2010, 2015, 2020, Inf)
 year_lab <- c("before 2005",
               "2005-2009",
               "2010-2014",
-              "2015-2020")
+              "2015-2020",
+              "2021 and later")
 wt_IA <-
     mutate(wt_IA,
            year = cut(p_year,
@@ -2097,7 +2098,7 @@ any(d$count == 0, na.rm = TRUE)
 ]
 --
 .pull-left[
-It _might_ be reasonable to assume these values were zeros, so replace
+It _might_ be reasonable to assume these `~` values were zeros, so replace
 them with zeros:
 ]
 --
